--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				</div>
 				<div class="col-lg-6 col-md-12">
 					<div class="home-img">
-						<img src="./image/arriere plan.webp" alt="home image">
+						<img src="./image/arriere plan.png" alt="home image">
 					</div>
 				</div>
 			</div>
