--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 							
 						</div>
 						<div class="about-banner-2">
-							<img class="animation-bounce" src="assets/img/blog-2.png" alt="About image">
+							<image class="animation-bounce" src="assets/image/blog-2.png" alt="About image">
 						</div>
 					</div>
 				</div>
