--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
 				<div class="col-lg-6 col-md-12 col-sm-12 wow fadeInDown" data-wow-delay="0.4s">
 					<div class="about-image-wrapper">
 						<div class="about-banner-1">
-							<img class="animation-bounce" src="assets/img/about-1.jpg" alt="About image">
+							<img class="animation-bounce" src="image/about-3.png" alt="About image">
 						</div>
 						<div class="about-main-banner">
 							<img src="image/yacine.png" alt="About image">
 
 						</div>
 						<div class="about-banner-2">
-							<img class="animation-bounce" src="assets/img/about-2.jpg" alt="About image">
+							<img class="animation-bounce" src="image/blog-2.png" alt="About image">
 						</div>
 					</div>
 				</div>
