--- a/index.html
+++ b/index.html
@@ -320,30 +320,36 @@
 	</section>
 
 
-	<section id= "stages"class="faq-area section-padding">
-		<div class="container">
-			<div class="row d-flex align-items-center">
-				<div class="col-md-12">
-					<div class="section-title">
-						<h5 class="small-title">Stages</h5>
-						<br>
-						<h2>1ère Année</h2>
-						<br>
-						<img src="image/claudebernard.png" alt="claudebernard" width="300" height="150"></ center>
-						<a href="stage/Rapport_de_stage_YacineObservatoire.docx" download="Stage Observatoire 2023" class="mon-bouton">Stage 1 :Observatoire </a></div>
-						<br>
-						<div class="section-title">
-							<h2>2ème Année</h2>
-							<a href="stage/Rapport_de_stage_Yacine_LAFEHAL-Clauger.docx" download="Rapport de stage 2.docx" class="mon-bouton">Stage 2 : clauger</a></div>
+	<section id="stages" class="stages-area section-padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="section-title">
+          <h2>Stages</h2>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="stage-item">
+          <h3>1ère Année</h3>
+          <img src="image/claudebernard.png" alt="Université Claude Bernard Lyon 1" class="stage-logo">
+          <p>Stage 1: Observatoire</p>
+          <a href="stage/Rapport_de_stage_YacineObservatoire.docx" download="Stage Observatoire 2023" class="button">Télécharger Rapport</a>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="stage-item">
+          <h3>2ème Année</h3>
+          <img src="image/clauger.png" alt="Clauger" class="stage-logo">
+          <p>Stage 2: Clauger</p>
+          <a href="stage/Rapport_de_stage_Yacine_LAFEHAL-Clauger.docx" download="Rapport de stage 2" class="button">Télécharger Rapport</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
-						<img src="image/clauger.png" alt="clauger" width="300" height="150"></ center>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</section>
 
 
 
