--- a/index.html
+++ b/index.html
@@ -312,30 +312,37 @@
 	</section>
 
 
-	<section id= "stages"class="faq-area section-padding">
-		<div class="container">
-			<div class="row d-flex align-items-center">
-				<div class="col-md-12">
-					<div class="section-title">
-						<h5 class="small-title">Stages</h5>
-						<br>
-						<h2>1ère Année</h2>
-						<br>
-						<img src="image/claudebernard.png" alt="claudebernard" width="300" height="150"></ center>
-						<a href="stage/Rapport_de_stage_YacineObservatoire.docx" download="Stage Observatoire 2023" class="mon-bouton">Stage 1 :Observatoire </a></div>
-						<br>
-						<div class="section-title">
-							<h2>2ème Année</h2>
-							<a href="stage/Rapport_de_stage_Yacine_LAFEHAL-Clauger.docx" download="Rapport de stage 2.docx" class="mon-bouton">Stage 2 : clauger</a></div>
+	<section id="stages" class="faq-area section-padding">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-12">
+                <!-- Section de la première année -->
+                <div class="section-title text-center">
+                    <h5 class="small-title">Stages</h5>
+                    <h2>1ère Année</h2>
+                    <div class="stage-image">
+                        <img src="image/claudebernard.png" alt="Université Claude Bernard" style="width: 300px; height: 150px;">
+                    </div>
+                    <div class="stage-download">
+                        <a href="stage/Rapport_de_stage_YacineObservatoire.docx" download="Stage Observatoire 2023" class="btn btn-primary">Stage 1 : Observatoire</a>
+                    </div>
+                </div>
+                
+                <!-- Section de la deuxième année -->
+                <div class="section-title text-center">
+                    <h2>2ème Année</h2>
+                    <div class="stage-image">
+                        <img src="image/clauger.png" alt="clauger" style="width: 300px; height: 150px;">
+                    </div>
+                    <div class="stage-download">
+                        <a href="stage/Rapport_de_stage_Yacine_LAFEHAL-Clauger.docx" download="Rapport de stage 2.docx" class="btn btn-primary">Stage 2 : Clauger</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
-						<img src="image/clauger.png" alt="clauger" width="300" height="150"></ center>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</section>
 
 
 
