--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 						<h2>Veille Technologique</h2>
 						<p>Au cours de cette deuxième année de formation on a du réaliser une veille technologique sur un sujet qu'on aura choisi
 							au préalable.</p>
-						<p>Le sujet que j'ai choisi pour cette veille est la voiture autonome.</p>
+						<p>Le sujet que j'ai choisi pour cette veille est le conflit cybernétique actuel entre israel et la palestine.</p>
 						<p>Ci-dessous vous trouverez le lien de téléchargement de ma veille.</p>
 						<br>
 						<a href="./Cyberattaques-Massives-entre-Israel-et-la-Palestine yacine.pptx" download="computer" class="mon-bouton">Veille technologique</a></div>
