--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 								Passionné d'informatique et étudiant en BTS SIO spécialisé en Solutions d'Infrastructures Systèmes et Réseaux, je suis Yacine LAFEHAL. À 19 ans, j'ai enrichi mon parcours à travers des stages significatifs chez CLAUGER et à l'Université Claude Bernard Lyon 1, focalisant sur la sécurité des systèmes informatiques et la gestion des réseaux.
 							</p>
 							<p>
-								Aspirant à devenir un expert en sécurité réseau, je suis fier de ma capacité à intégrer et à innover au sein d'équipes techniques. Mes stages ont été cruciaux pour acquérir une compréhension approfondie des enjeux en sécurité informatique et maîtriser des outils comme Walix Bastion, Cyberwatch, et PDQ Deploy.
+								Aspirant à devenir un expert en sécurité réseau, je suis fier de ma capacité à intégrer et à innover au sein d'équipes techniques. Mes stages ont été cruciaux pour acquérir une compréhension approfondie des enjeux en sécurité informatique et maîtriser des outils comme Walix Bastion, Cyberwatch,PDQ Deploy,la configuration de routeur,linux...
 							</p>
 							<p>
 								Motivé et en quête de défis, je vise à poursuivre mon développement professionnel en m'orientant vers un Bachelor en administrateur réseau et cybersécurité après mon BTS SIO.
