--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="zxx">
 
@@ -61,8 +62,8 @@
 						<h1>Portfolio Yacine LAFEHAL</h1>
 						<p>Bonjour, je suis Yacine LAFEHAL, j'ai 19 ans et je suis actuellement étudiant en deuxième année de BTS SIO à SUP LES CHASSAGNES. Je suis passionné par l'informatique, ce qui m'a conduit à me spécialiser dans les solutions d'infrastructures systèmes et réseaux.</p> 
 
-						
-					
+						<p>Après avoir acquis diverses compétences telles que la configuration de routeurs, la gestion de la sécurité des systèmes d'information, et la mise en œuvre de solutions de cybersécurité lors de mes stages chez CLAUGER et l'Université Claude Bernard Lyon 1, je souhaite poursuivre ma carrière dans ce domaine.
+						</p>
 						<div class="home-button-box">
 							<a href="#competences" class="button home-btn-1 js-scroll">Mes compétences techniques</a>
 							<a href="#about" class="button home-btn-2 js-scroll">En savoir plus</a>
@@ -78,30 +79,7 @@
 		</div>
 	</section>
 
-	
-
-	<section id="about" class="about-area section-padding">
-		<div class="container">
-			<div class="row d-flex align-items-center">
-				<div class="col-lg-6 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.2s">
-					<div class="about-content">
-						<div class="about-content-text">
-
-							<h2>A propos de moi</h2>
-							<p>
-								Passionné d'informatique et étudiant en BTS SIO spécialisé en Solutions d'Infrastructures Systèmes et Réseaux, je suis Yacine LAFEHAL. À 19 ans, j'ai enrichi mon parcours à travers des stages significatifs chez CLAUGER et à l'Université Claude Bernard Lyon 1, focalisant sur la sécurité des systèmes informatiques et la gestion des réseaux.
-							</p>
-							<p>
-								Aspirant à devenir un expert en sécurité réseau, je suis fier de ma capacité à intégrer et à innover au sein d'équipes techniques. Mes stages ont été cruciaux pour acquérir une compréhension approfondie des enjeux en sécurité informatique et maîtriser des outils comme Walix Bastion, Cyberwatch,PDQ Deploy,la configuration de routeur,linux...
-							</p>
-							<p>
-								Motivé et en quête de défis, je vise à poursuivre mon développement professionnel en m'orientant vers un Bachelor en administrateur réseau et cybersécurité après mon BTS SIO.
-							</p>
-
-						</div>
-					</div>
-				</div>
-				<section id="competences" class="mini-feature-area bg-gray section-padding">
+	<section id="competences" class="mini-feature-area bg-gray section-padding">
 		<div class="container">
 			<div class="row d-flex align-items-center">
 				<div class="col-md-12">
@@ -155,6 +133,28 @@
 			</div>
 		</div>
 	</section>
+
+	<section id="about" class="about-area section-padding">
+		<div class="container">
+			<div class="row d-flex align-items-center">
+				<div class="col-lg-6 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.2s">
+					<div class="about-content">
+						<div class="about-content-text">
+
+							<h2>A propos de moi</h2>
+							<p>
+								Passionné d'informatique et étudiant en BTS SIO spécialisé en Solutions d'Infrastructures Systèmes et Réseaux, je suis Yacine LAFEHAL. À 19 ans, j'ai enrichi mon parcours à travers des stages significatifs chez CLAUGER et à l'Université Claude Bernard Lyon 1, focalisant sur la sécurité des systèmes informatiques et la gestion des réseaux.
+							</p>
+							<p>
+								Aspirant à devenir un expert en sécurité réseau, je suis fier de ma capacité à intégrer et à innover au sein d'équipes techniques. Mes stages ont été cruciaux pour acquérir une compréhension approfondie des enjeux en sécurité informatique et maîtriser des outils comme Walix Bastion, Cyberwatch,PDQ Deploy,la configuration de routeur,linux...
+							</p>
+							<p>
+								Motivé et en quête de défis, je vise à poursuivre mon développement professionnel en m'orientant vers un Bachelor en administrateur réseau et cybersécurité après mon BTS SIO.
+							</p>
+
+						</div>
+					</div>
+				</div>
 				<div class="col-lg-6 col-md-12 col-sm-12 wow fadeInDown" data-wow-delay="0.4s">
 					<div class="about-image-wrapper">
 						<div class="about-banner-1">
