--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 					<div class="section-title">
 						<h2>Tableau de Synthèse</h2>
 					</div>
-					<a href="Tableau synthese yacine.xlsx"Tableau de synthèse v2.xlsx" class="mon-bouton">Télécharger mon tableau de synthèse</a></div>
+					<a href="Tableau synthese yacine (1.xlsx"Tableau de synthèse v2.xlsx" class="mon-bouton">Télécharger mon tableau de synthèse</a></div>
 				</div>
 			</div>
 		</div>
