--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 							<div class="testi-content-inner">
 								<div class="testimonial-content">
 									<p>Service de déploiement</p>
-									<p>On a dû éffectuer la sauvegarde de plsuieurs fichiers avec VEEAM. 
+									<p>On a dû éffectuer la sauvegarde de plusieurs fichiers avec VEEAM. 
 										Et tout ça devait être stocker sur notre TrueNAS.
 									</p>
 								</div>
