--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <div class="col-md-12">
                 <!-- Section de la première année -->
                 <div class="section-title text-center">
-			<a href="/screen des projets.docx" download="screen des projets.docx" class="mon-bouton">Screen des projets</a>
+			<a href="/screen des projets.docx" download="/screen des projets.docx" class="mon-bouton">Screen des projets</a>
                     <h2 class="small-title">Stages</h2>
                     <h3>1ère Année</h3>
                     <div class="stage-image">
