--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 					</div>
 					<div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
 						<div class="footer-list">
-							<h5 class="title">Quick Link</h5>
+							<h5 class="title">lien rapide</h5>
 							<ul>
 								<li><a href="#home">Home</a>
 								</li>
